Fixed locker container alignment.

--- a/src/containers/Earn/Withdraw/index.scss
+++ b/src/containers/Earn/Withdraw/index.scss
@@ -47,6 +47,7 @@
 }
 .calculator-main-container {
   margin-top: 47px;
+  height: calc(100% - 14%);
   padding: 10px 25px 25px 25px !important;
   border: 0.5px solid $border-color-base;
   @media only screen and (max-width: 960px) {
@@ -298,7 +299,7 @@
                 border: 0;
                 top: -6px;
                 background: $silver-color;
-
+                display: none;
                 &.ant-slider-dot-active {
                   background: #13a356;
                 }
@@ -328,7 +329,7 @@
                 left: 0% !important;
               }
               span:nth-child(2) {
-                left: 95% !important;
+                left: 98% !important;
               }
             }
           }
